syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "AbilityControlBlock.proto";

message AbilityChangeNotify {
	AbilityControlBlock ability_control_block = 2;
	uint32 entity_id = 15;
}
