syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "Vector.proto";

message CurVehicleInfo {
	uint32 entity_id = 1;
	uint32 pos = 2;
	uint32 gadget_id = 3;
	Vector GGCOBIFABFF = 4;
	uint32 ABEOOGJNDBG = 5;
	Vector BFPNKNGPFJE = 6;
}
