syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "ForwardType.proto";
import "Vector.proto";

message EvtCreateGadgetNotify {
	uint32 entity_id = 5;
	ForwardType forward_type = 8;
	uint32 config_id = 10;
	uint64 guid = 7;
	uint32 room_id = 15;
	uint32 target_entity_id = 11;
	bool is_peer_id_from_player = 1065;
	uint32 prop_owner_entity_id = 4;
	repeated uint32 target_lock_point_index_list = 1569;
	uint32 owner_entity_id = 2;
	bool IGNMCMJJFBE = 12;
	uint32 camp_id = 14;
	Vector InitEulerAngles = 3;
	bool ICOAPDMGPGC = 13;
	uint32 target_lock_point_index = 6;
	Vector InitPos = 9;
	uint32 camp_type = 1;
	bool PPGAJPPGFML = 779;
	repeated uint32 target_entity_id_list = 33;
}
