syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "SceneEntityInfo.proto";
import "VisionType.proto";

message SceneEntityAppearNotify {
	uint32 param = 11;
	repeated SceneEntityInfo entity_list = 15;
	VisionType appear_type = 1;
}
