syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "SceneTeamAvatar.proto";

message SceneTeamUpdateNotify {
	bool is_in_mp = 14;
	repeated SceneTeamAvatar scene_team_avatar_list = 6;
}
